# AI-personal-assistant

./: .gitignore  README.md
email-assistant/: .gitignore  README.md  pyproject.toml  requirements.txt  run_gmail_mcp_server_conda.sh  run_gmail_mcp_server_uv.sh
email-assistant/src/email-assistant/config/: settings.py
email-assistant/src/email_assistant/a2a/: cards.py  client.py  executor.py  handler.py  server.py  skills.py
email-assistant/src/email_assistant/agent/: interface.py
email-assistant/src/email_assistant/agent/graphs/: cls_email_graph.py  subscription_graph.py  write_email_graph.py
email-assistant/src/email_assistant/agent/nodes/: __init__.py  cls_nodes.py  direct_send_node.py  generate_draft_node.py  reply_nodes.py  router_node.py  send_draft_node.py  send_email_node.py
email-assistant/src/email_assistant/api/: subscriptions.py
email-assistant/src/email_assistant/core/: logger.py  prompts.py  schemas.py
email-assistant/src/email_assistant/services/: subscription_service.py
orchestrator/: .gitignore  Dockerfile  requirements.txt
orchestrator/orchestrator/: config.py  main.py
orchestrator/orchestrator/a2a/: cards.py  client.py  executor.py  models.py  server.py  skills.py
orchestrator/orchestrator/agent/: agent_registry.py  graph.py  intent_parser.py  prompts.py  state.py  tasks.py
orchestrator/orchestrator/core/: logger.py
orchestrator/orchestrator/tests/: test_email_operations.py
ui/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package.json
ui/src/: App.css  App.jsx
